@@ -220,7 +220,8 @@ public:
 		OUTPUT_ALBEDO,
 		OUTPUT_AVG_SHADING_NORMAL,
 		OUTPUT_NOISE,
-		OUTPUT_USER_IMPORTANCE
+		OUTPUT_USER_IMPORTANCE,
+		OUTPUT_CAUSTIC
 	} FilmOutputType;
 
 	/*!
