@@ -52,7 +52,7 @@ public:
 		RADIANCE_GROUP, UV, RAYCOUNT, BY_MATERIAL_ID, IRRADIANCE,
 		OBJECT_ID, OBJECT_ID_MASK, BY_OBJECT_ID, SAMPLECOUNT,
 		CONVERGENCE, SERIALIZED_FILM, MATERIAL_ID_COLOR, ALBEDO, AVG_SHADING_NORMAL,
-		NOISE, USER_IMPORTANCE,
+		NOISE, USER_IMPORTANCE, CAUSTIC,
 		FILMOUTPUT_TYPE_COUNT
 	} FilmOutputType;
 
