@@ -45,6 +45,8 @@ film.outputs.2.type = "AVG_SHADING_NORMAL"
 film.outputs.3.filename = "RGB_IMAGEPIPELINE_1.png"
 film.outputs.3.index = 1
 film.outputs.3.type = "RGB_IMAGEPIPELINE"
+film.outputs.4.filename = "CAUSTIC.exr"
+film.outputs.4.type = "CAUSTIC"
 lightstrategy.type = "LOG_POWER"
 opencl.cpu.use = 0
 opencl.devices.select = "110"
