@@ -27,6 +27,7 @@
 * Added the support for Randomized Texture Tiling (#228)
 * Added the support for UVRandomMapping2D
 * Added the support for LocalRandomMapping3D
+* Added the support for Caustic AOV when using hybrid rendering
 
 ### Fixed Bugs
 
